# ERPNext_telegram_assignment_bot

./: .env  .gitignore  DROP  EXIT  Makefile  Procfile  README.md  requirements.txt  start-bench.sh
apps/barcode_shrdc/: setup.py
apps/barcode_shrdc/barcode_shrdc/: hooks.py  install.py
apps/barcode_shrdc/barcode_shrdc/fixtures/: client_script.json
apps/erpnext_telegram_integration/: setup.py
apps/erpnext_telegram_integration/erpnext_telegram_integration/: hooks.py  install.py
apps/erpnext_telegram_integration/erpnext_telegram_integration/config/: desktop.py
apps/erpnext_telegram_integration/erpnext_telegram_integration/utils/: telegram_api.py
apps/frepple/: setup.py
apps/frepple/frepple/: hooks.py  install.py
apps/frepple/frepple/config/: desktop.py
apps/healthcare/healthcare/: __init__.py
apps/metabase_integration/: setup.py
apps/metabase_integration/metabase_integration/: hooks.py  install.py
apps/telegram_assignment_bot/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/telegram_assignment_bot/assignment_bot/: __init__.py  __main__.py  bot.py  config.py  storage.py
apps/telegram_assignment_bot/tests/: test_storage.py
config/: redis_cache.conf  redis_queue.conf
sites/: apps.json  apps.txt  common_site_config.json  localhost
sites/assets/: assets-rtl.json  assets.json  barcode_shrdc  erpnext  erpnext_ai  erpnext_telegram_integration  frappe  frepple  healthcare  rfid
sites/erp.localhost/: site_config.json  touched_tables.json
sites/erp.localhost/indexes/web_routes/: _MAIN_1.toc  (+1 more)
(+11 files in other folders)
